# HarmonicPatterns

./: .#requirements.txt  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  setup.py
HarmonicPatterns/: harmonic_functions.py  settings.py
examples/: HarmoCurrent.ipynb  run_detect.py  run_okx_example.py
src/: harmonic_functions.py  harmonic_patterns.py
